--- a/Lab_12_Ensemble_Methods/Gradient_boosting_and_XGBoost.ipynb
+++ b/Lab_12_Ensemble_Methods/Gradient_boosting_and_XGBoost.ipynb
@@ -134,7 +134,7 @@
     "    predictions += preds*0.8\n",
     "    #plt.scatter(features, predictions)\n",
     "    #plt.scatter(features, residuals[-1])\n",
-    "    #plot_regressor(tree[0], features, centered_labels)\n",
+    "    #utils.plot_regressor(tree[0], features, centered_labels)\n",
     "    plt.scatter(features, centered_labels, color='white')\n",
     "    utils.plot_regressor(weak_learner, features, residuals[-1])\n",
     "    plt.show()\n",
@@ -160,7 +160,7 @@
     "    gb_intermediate = GradientBoostingRegressor(max_depth=2, n_estimators=i, learning_rate=0.8)\n",
     "    gb_intermediate.fit(features, labels)\n",
     "    predictions = gb_intermediate.predict(features)\n",
-    "    plot_regressor(gb_intermediate, features, labels)"
+    "    utils.plot_regressor(gb_intermediate, features, labels)"
    ]
   },
   {
