--- a/Lab_4_Testing_Overfitting_Underfitting/Polynomial_regression_regularization.ipynb
+++ b/Lab_4_Testing_Overfitting_Underfitting/Polynomial_regression_regularization.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chapter 4: Testing and regularization with Turi Create"
+    "# Lab 4: Testing and regularization with Turi Create"
    ]
   },
   {
