--- a/Lab_3_Linear_Regression/refactored/Coding_linear_regression.ipynb
+++ b/Lab_3_Linear_Regression/refactored/Coding_linear_regression.ipynb
@@ -2,15 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4d2393b8-4965-46f1-91d4-78c30e573be1",
    "metadata": {},
    "source": [
-    "# Chapter 3: Linear Regression for a housing dataset"
+    "# Lab 3: Linear Regression for a housing dataset"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a35515d8-1f6f-45e3-afe3-765f8ef9ec6b",
    "metadata": {},
    "source": [
     "### Importing the necessary packages"
@@ -18,8 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "39b72d38-411a-4e8a-ac59-4fafa4a4584d",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +27,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fb399a2-8d72-4d89-a4a5-6f659c86d15e",
    "metadata": {},
    "source": [
     "### Plotting functions"
@@ -38,8 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "29370b56-fb2d-44b5-87f4-0e1f4193da67",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +54,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5db8c9fd-9e3c-413d-9445-42ce409c69f4",
    "metadata": {},
    "source": [
     "### Coding the tricks\n",
@@ -71,8 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "8d37ba4f-6f1a-4f8c-822d-c40cc699e953",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +126,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39215afc-ff96-4a60-8647-31f134411e5b",
    "metadata": {},
    "source": [
     "### Constructing the linear regression algorithm\n",
@@ -145,8 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "7cac9f6d-5ccd-48ff-882e-2e14802a8664",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +191,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c82a21e8-e7c7-479e-b002-fe325b0cf425",
    "metadata": {},
    "source": [
     "### Adding error metrics to our model\n",
@@ -213,8 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "bb80e385-5f00-4973-8114-335389fa494d",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +260,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f127075-9f80-4dc0-96a4-1ab6524a35dd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -293,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
